# ffgl-facekit

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
source/lib/: FFGLSDK.cpp  FFGLSDK.h
source/lib/ffglquickstart/: FFGLParamFile.cpp  FFGLParamFile.h  FFGLPlugin.cpp  FFGLPlugin.h
source/plugins/: CMakeLists.txt
source/plugins/DepthRGBCloud/: DepthRGBCloud.cpp  DepthRGBCloud.h
source/plugins/FaceKit/: CMakeLists.txt  FaceKit.cpp  FaceKit.h  FaceMesh.cpp  FaceMesh.h  FaceModel.cpp  FaceModel.h  FaceMorphTargets.cpp  FaceMorphTargets.h  OscReceiver.cpp  OscReceiver.h  UdpSocket.cpp  UdpSocket.h
source/plugins/IRComposite/: IRComposite.cpp  IRComposite.h
source/plugins/ModelViewer/: ModelViewer.cpp  ModelViewer.h  README.md
source/plugins/ModelViewer/MODELVIEWER 1 CPP AND H/: ModelViewer.cpp  ModelViewer.h
source/plugins/PointCloudViewer/: PointCloudViewer.cpp  PointCloudViewer.h
tools/: install_facekit_to_resolume.sh
